fixed alignment and text size in contact and about us pages, put contact form in a component

--- a/meteor-app/imports/ui/sass/components/_banner.scss
+++ b/meteor-app/imports/ui/sass/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
 	background: url(../images/banner-img.jpg) no-repeat 0 0;
-	min-height: 700px;
+	min-height: 500px;
 	position: relative;
 	z-index: 1;
 	background-size: cover;
@@ -28,7 +28,7 @@
 		}
 
 		h1 {
-			font-size: 3em;
+			font-size: 4em;
 			line-height: 1.2em;
 			font-weight: bold;
 			margin-bottom: 40px;
